--- a/booking.html
+++ b/booking.html
@@ -1,177 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book a Room - Jayvee Hall of Mansion</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
-  <style>
-    /* Global Styles */
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      background: url('assets/bgindex.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
-
-    /* Booking Container */
-    .booking-container {
-      background: rgba(0,0,0,0.7);
-      padding: 40px 30px;
-      border-radius: 16px;
-      max-width: 500px;
-      width: 100%;
-      text-align: center;
-      backdrop-filter: blur(8px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-      animation: fadeIn 0.8s ease;
-    }
-
-    .booking-container h2 {
-      margin-bottom: 25px;
-      font-weight: 600;
-      font-size: 1.8rem;
-      letter-spacing: 0.5px;
-    }
-
-    /* Form Styles */
-    .booking-form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    .booking-form input,
-    .booking-form select {
-      padding: 14px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-      outline: none;
-      transition: all 0.3s ease;
-    }
-
-    .booking-form input:focus,
-    .booking-form select:focus {
-      box-shadow: 0 0 0 3px rgba(25, 135, 84, 0.4);
-    }
-
-    /* Button Styles */
-    .booking-form button {
-      padding: 14px;
-      border-radius: 10px;
-      font-size: 16px;
-      font-weight: 600;
-      cursor: pointer;
-      border: none;
-      background: linear-gradient(45deg, #198754, #157347);
-      color: white;
-      transition: all 0.3s ease;
-    }
-
-    .booking-form button:hover {
-      background: linear-gradient(45deg, #157347, #0f5c32);
-      transform: translateY(-2px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.3);
-    }
-
-    /* Animations */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      .booking-container { padding: 30px 20px; }
-      .booking-container h2 { font-size: 1.5rem; }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Book a Room - Jayvee Hall of Mansion</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap">
+<style>
+  body {
+    font-family: 'Poppins', sans-serif;
+    background: #f4f4f4;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background: #121212;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    font-size: 26px;
+    font-weight: 600;
+  }
+  main {
+    max-width: 600px;
+    margin: 30px auto;
+    background: #fff;
+    padding: 25px 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  }
+  h2 {
+    text-align: center;
+    margin-bottom: 25px;
+    color: #121212;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  input, select {
+    padding: 10px 15px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    outline: none;
+  }
+  button {
+    padding: 12px;
+    border: none;
+    background: #121212;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  button:hover {
+    background: #333;
+  }
+  .message {
+    margin-top: 10px;
+    text-align: center;
+    font-weight: 500;
+    color: green;
+  }
+  footer {
+    background: #121212;
+    color: #fff;
+    text-align: center;
+    padding: 15px 10px;
+    margin-top: 40px;
+  }
+</style>
 </head>
 <body>
-  <!-- Header Placeholder -->
-  <div id="header-placeholder"></div>
 
-  <div class="booking-container">
-    <h2>Book Your Stay</h2>
-    <form class="booking-form" id="bookingForm">
-      <input type="text" id="name" placeholder="Full Name" required>
-      <input type="email" id="email" placeholder="Email Address" required>
-      <input type="date" id="checkin" required>
-      <input type="date" id="checkout" required>
-      <select id="room" required>
-        <option value="" disabled selected>Select a Room</option>
-        <option>Room 101 - Deluxe Room</option>
-        <option>Room 102 - Executive Suite</option>
-        <option>Room 103 - Family Room</option>
-        <option>Room 104 - Presidential Suite</option>
-      </select>
-      <button type="submit">Submit Booking</button>
-    </form>
-  </div>
+<header>
+  Jayvee Hall of Mansion - Book a Room
+</header>
 
-  <!-- Footer Placeholder -->
-  <div id="footer-placeholder"></div>
+<main>
+  <h2>Booking Form</h2>
+  <form id="bookingForm">
+    <input type="text" id="name" placeholder="Full Name" required>
+    <input type="email" id="email" placeholder="Email Address" required>
+    <input type="date" id="checkin" placeholder="Check-in Date" required>
+    <input type="date" id="checkout" placeholder="Check-out Date" required>
+    <select id="room" required>
+      <option value="">Select Room Type</option>
+      <option value="Single">Single</option>
+      <option value="Double">Double</option>
+      <option value="Suite">Suite</option>
+    </select>
+    <button type="submit">Submit Booking</button>
+    <div class="message" id="message"></div>
+  </form>
+</main>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+<footer>
+  © 2025 Jayvee Hall of Mansion. All Rights Reserved.
+</footer>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
-      authDomain: "jayveehallofmansion.firebaseapp.com",
-      databaseURL: "https://jayveehallofmansion-default-rtdb.firebaseio.com",
-      projectId: "jayveehallofmansion",
-      storageBucket: "jayveehallofmansion.firebasestorage.app",
-      messagingSenderId: "596113378063",
-      appId: "1:596113378063:web:ae6fa08175627727660c7a",
-      measurementId: "G-LY9QYJKZMX"
-    };
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+const firebaseConfig = {
+  apiKey: "AIzaSyCdMcz7H8k5QjQikD6ZAlf7kHw7BbUBO70",
+  authDomain: "jayveehallofmansion.firebaseapp.com",
+  databaseURL: "https://jayveehallofmansion-default-rtdb.firebaseio.com",
+  projectId: "jayveehallofmansion",
+  storageBucket: "jayveehallofmansion.firebasestorage.app",
+  messagingSenderId: "596113378063",
+  appId: "1:596113378063:web:ae6fa08175627727660c7a",
+  measurementId: "G-LY9QYJKZMX"
+};
 
-    const bookingForm = document.getElementById("bookingForm");
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    bookingForm.addEventListener("submit", (e) => {
-      e.preventDefault();
+const bookingForm = document.getElementById('bookingForm');
+const messageDiv = document.getElementById('message');
 
-      const booking = {
-        name: document.getElementById("name").value.trim(),
-        email: document.getElementById("email").value.trim(),
-        checkin: document.getElementById("checkin").value,
-        checkout: document.getElementById("checkout").value,
-        room: document.getElementById("room").value,
-        status: "pending",
-        timestamp: Date.now()
-      };
+bookingForm.addEventListener('submit', (e) => {
+  e.preventDefault();
 
-      push(ref(db, "bookings"), booking)
-        .then(() => {
-          // Redirect to admin panel after successful submission
-          window.location.href = "admin.html";
-        })
-        .catch(() => {
-          alert("❌ Failed to submit booking. Please try again.");
-        });
+  const bookingData = {
+    name: document.getElementById('name').value,
+    email: document.getElementById('email').value,
+    checkin: document.getElementById('checkin').value,
+    checkout: document.getElementById('checkout').value,
+    room: document.getElementById('room').value,
+    status: 'pending' // default status
+  };
+
+  push(ref(db, 'bookings'), bookingData)
+    .then(() => {
+      messageDiv.textContent = "✅ Booking submitted successfully!";
+      bookingForm.reset();
+      setTimeout(() => messageDiv.textContent = "", 4000);
+      // redirect to admin panel
+      window.location.href = 'admin.html';
+    })
+    .catch(() => {
+      messageDiv.textContent = "❌ Failed to submit booking. Try again.";
     });
+});
+</script>
 
-    // Load header and footer
-    fetch('header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header-placeholder').innerHTML = data);
-
-    fetch('footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer-placeholder').innerHTML = data);
-  </script>
 </body>
 </html>
